Added session handling and encryption capabilities also added calls for the same in UI

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "concurrently \"ng serve\" \"nodemon proxy-server/server.js\"",
+    "start": "concurrently \"ng serve\" \"node proxy-server/server.js\"",
     "server": "nodemon proxy-server/server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -22,11 +22,14 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@ngrx/store": "^16.2.0",
+    "@types/crypto-js": "^4.1.1",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "generate-passphrase": "^1.3.0",
     "jsonwebtoken": "^9.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
