--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "font-awesome": "^4.7.0",
     "generate-passphrase": "^1.3.0",
     "jsonwebtoken": "^9.0.1",
     "rxjs": "~7.8.0",
