--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "font-awesome": "^4.7.0",
     "generate-passphrase": "^1.3.0",
     "jsonwebtoken": "^9.0.1",
+    "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uniqid": "^5.4.0",
