--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.1.0",
     "@ngrx/store": "^16.2.0",
     "@types/crypto-js": "^4.1.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
@@ -30,12 +31,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
-    "generate-passphrase": "^1.3.0",
     "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.5.0",
     "ngx-spinner": "^16.0.2",
+    "nodemailer": "^6.9.5",
+    "otp-generator": "^4.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "uniqid": "^5.4.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
