--- a/proxy-server/.env
+++ b/proxy-server/.env
@@ -1,1 +1,6 @@
 NODE_PORT=3000
+MONGO_URI="mongodb+srv://sujaydas:cH6tPYTVucdmvOSr@cluster-ecomm.n6gfiqc.mongodb.net/shop?retryWrites=true&w=majority"
+MAIL_HOST="smtp.ethereal.email"
+MAIL_PORT=587
+MAIL_USER="sophia.sawayn72@ethereal.email"
+MAIL_PASSWORD="XXfRqjfVRAegnbgFyZ"
